enable push notification

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,13 +1,6 @@
-<ion-header class="ion-no-border">
-  <ion-toolbar>
-    <ion-buttons slot="end">
-      <ion-button color="primary" (click)="back()"> {{"HOME"|translate}}
-        <ion-icon name="home" clot="start"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-  </ion-toolbar>
+<ion-header>
+  <ion-toolbar color="primary"></ion-toolbar>
 </ion-header>
-
 <ion-content class="ion-text-center">
   <form [formGroup]="emailLoginForm">
   <ion-grid>
