--- a/src/app/tabs/requests/requests.page.html
+++ b/src/app/tabs/requests/requests.page.html
@@ -1,12 +1,13 @@
 <ion-header>
   <ion-toolbar color="primary">
     <ion-buttons slot="start">
-      <ion-button strong="true" expand="block" fill="solid" (click)="viewRequests()" color="tertiary">{{"requests"|translate}}</ion-button>
+      <ion-button strong="true" expand="block" fill="solid" (click)="viewRequests()" color="tertiary">
+        {{"requests"|translate}}</ion-button>
     </ion-buttons>
 
     <ion-buttons slot="end">
-      <ion-button  (click)="logout()" >{{"LOG_OUT"|translate}}
-        <ion-icon  name="log-out-outline" slot="start"></ion-icon>
+      <ion-button (click)="logout()">{{"LOG_OUT"|translate}}
+        <ion-icon name="log-out-outline" slot="start"></ion-icon>
       </ion-button>
     </ion-buttons>
 
@@ -14,6 +15,6 @@
 </ion-header>
 
 <ion-content>
-<app-map *ngIf="currentLocation.lat && currentLocation.lng" [selectable]="false" [title]='' [closeButtonText]=''
-[center]="currentLocation" [showToolbar]="false" ></app-map>
+  <app-map *ngIf="currentLocation.lat && currentLocation.lng" [selectable]="false" [title]='' [closeButtonText]=''
+    [center]="currentLocation" [showToolbar]="false" [newRequests]="avaliableRequest"></app-map>
 </ion-content>
