implement auto refresh for the count of requests

--- a/src/app/tabs/requests/requests.page.html
+++ b/src/app/tabs/requests/requests.page.html
@@ -1,8 +1,8 @@
 <ion-header class="ion-no-border">
   <ion-toolbar >
     <ion-buttons slot="start">
-      <ion-button  strong="true" expand="block" fill="solid" (click)="viewRequests()" color="danger">
-        {{"REQUESTS"|translate}} {{avaliableRequest.length}}</ion-button>
+      <ion-button *ngIf="realDataService.avaliableRequest" strong="true" expand="block" fill="solid" (click)="viewRequests()" color="danger">
+        {{"REQUESTS"|translate}} {{realDataService.avaliableRequest.length}}</ion-button>
     </ion-buttons>
     <ion-buttons slot="end">
       <ion-item line=none>
@@ -13,8 +13,7 @@
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
-
 <ion-content fullscreen>
-  <app-map *ngIf="currentLocation.lat && currentLocation.lng" [selectable]="false" [title]='' [closeButtonText]=''
-    [center]="currentLocation" [showToolbar]="false" [newRequests]="avaliableRequest"></app-map>
+  <app-map *ngIf="currentLocation.lat && currentLocation.lng && realDataService.avaliableRequest" [selectable]="false" [title]='' [closeButtonText]=''
+    [center]="currentLocation" [showToolbar]="false" [newRequests]="realDataService.avaliableRequest"></app-map>
 </ion-content>
