--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,17 +1,17 @@
 <ion-tabs>
-  <ion-tab-bar slot="bottom" color="primary">
+  <ion-tab-bar slot="bottom" >
 
-    <ion-tab-button tab="requests" >
+    <ion-tab-button tab="requests" color="primary" >
       <ion-icon name="car"></ion-icon>
-      <ion-label>{{"REQUESTS"|translate}}</ion-label>
+      <ion-label class="ion-text-wrap">{{"REQUESTS"|translate}}</ion-label>
     </ion-tab-button>
-    <ion-tab-button tab="tasks">
+    <ion-tab-button tab="tasks" color="primary">
       <ion-icon name="card"></ion-icon>
-      <ion-label>{{"MY_TASKS"|translate}}</ion-label>
+      <ion-label class="ion-text-wrap">{{"MY_TASKS"|translate}}</ion-label>
     </ion-tab-button>
-    <ion-tab-button tab="settings">
+    <ion-tab-button tab="settings" color="primary">
       <ion-icon name="settings-outline"></ion-icon>
-      <ion-label>{{"SETTINGS"|translate}}</ion-label>
+      <ion-label class="ion-text-wrap">{{"SETTINGS"|translate}}</ion-label>
     </ion-tab-button>
     </ion-tab-bar>
 </ion-tabs>
