--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,23 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+ion-content{
+  --background: var(--ion-color-white);
+}
+@font-face {
+  font-family: 'Plex';
+  font-style: normal;
+  font-weight: normal;
+  src: url('/assets/fonts/Cairo-Bold.ttf');
+}
+
+@font-face {
+  font-family: 'Plex';
+  font-weight: bold;
+  src: url('/assets/fonts/Cairo-Bold.ttf');
+}
+
+:root {
+    --ion-text-color: #828585;
+    --ion-font-family: 'Plex';
+}
