--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -2,30 +2,30 @@
 // http://ionicframework.com/docs/theming/
 
 /** Ionic CSS Variables **/
+/** Ionic CSS Variables **/
 :root {
   /** primary **/
-  --ion-color-primary:  #03c04a ;
-  --ion-color-primary-rgb: 56, 128, 255;
-  --ion-color-primary-contrast: #ffffff;
-  --ion-color-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-primary-shade: #3CB043;
-  --ion-color-primary-tint: #74B72E;
+  --ion-color-primary: #02CCBC;
+  --ion-color-primary-rgb: 2,204,188;
+  --ion-color-primary-contrast: #000000;
+  --ion-color-primary-contrast-rgb: 0,0,0;
+  --ion-color-primary-shade: #02b4a5;
+  --ion-color-primary-tint: #1bd1c3;
 
-  /** secondary **/
-  --ion-color-secondary: #728C69;
-  --ion-color-secondary-rgb: 61, 194, 255;
-  --ion-color-secondary-contrast: #ffffff;
-  --ion-color-secondary-contrast-rgb: 255, 255, 255;
-  --ion-color-secondary-shade: #74b72E;
-  --ion-color-secondary-tint: #3DED97;
+  --ion-color-secondary: #77bf2a;
+  --ion-color-secondary-rgb: 119,191,42;
+  --ion-color-secondary-contrast: #000000;
+  --ion-color-secondary-contrast-rgb: 0,0,0;
+  --ion-color-secondary-shade: #69a825;
+  --ion-color-secondary-tint: #85c53f;
 
   /** tertiary **/
-  --ion-color-tertiary: #FFD580;
+  --ion-color-tertiary: #5260ff;
   --ion-color-tertiary-rgb: 82, 96, 255;
-  --ion-color-tertiary-contrast: #ff0b0b;
+  --ion-color-tertiary-contrast: #ffffff;
   --ion-color-tertiary-contrast-rgb: 255, 255, 255;
-  --ion-color-tertiary-shade: #fa8128;
-  --ion-color-tertiary-tint: #FCAE1E;
+  --ion-color-tertiary-shade: #4854e0;
+  --ion-color-tertiary-tint: #6370ff;
 
   /** success **/
   --ion-color-success: #2dd36f;
@@ -68,19 +68,12 @@
   --ion-color-medium-tint: #9d9fa6;
 
   /** light **/
-  --ion-color-light: #f4f5f8;
-  --ion-color-light-rgb: 244, 245, 248;
+  --ion-color-light: #ffffff;
+  --ion-color-light-rgb: 255,255,255;
   --ion-color-light-contrast: #000000;
-  --ion-color-light-contrast-rgb: 0, 0, 0;
-  --ion-color-light-shade: #d7d8da;
-  --ion-color-light-tint: #f5f6f9;
-  /** white***/
-  --ion-color-white: #FFFFFF;
-  --ion-color-white-rgb: 255, 255, 255;
-  --ion-color-white-contrast: #000000;
-  --ion-color-white-contrast-rgb: 0, 0, 0;
-  --ion-color-white-shade: #FFFFFF;
-  --ion-color-white-tint: #FFFFFF;
+  --ion-color-light-contrast-rgb: 0,0,0;
+  --ion-color-light-shade: #e0e0e0;
+  --ion-color-light-tint: #ffffff;
 }
 
 @media (prefers-color-scheme: dark) {
